[tool.poetry]
name = "nuke-doc-cn"
version = "0.1.0"
description = ""
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
classifiers = [
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.7"
aliyun-python-sdk-core = "^2.13"
aliyun-python-sdk-alimt = "^1.0"
environs = "^7.1"
beautifulsoup4 = "^4.8"
fire = "^0.2.1"
cached_property = "^1.5"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
